[incubator-kie-issues#1882] Test cases updated